booking summary on home

--- a/views/admin_dashboard.ejs
+++ b/views/admin_dashboard.ejs
@@ -79,7 +79,7 @@
         </div>
         <div class="row gy-4">
           <div class="col-12 col-lg-2">
-            <nav class="navmenu">
+            <nav class="navmenu-mini">
               <ul class="nav flex-column align-items-start">
                 <li class="nav-item">
                   <a class="nav-link active" href="#bookings">Bookings</a>
@@ -391,6 +391,7 @@
       }
     });
   </script>
+  <script src="assets/js/main.js"></script>
   <script src="js/bookings_page.js"></script>
 </body>
 
