--- a/views/bookings.ejs
+++ b/views/bookings.ejs
@@ -19,6 +19,21 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
+  <style>
+    .col-width-small {
+      width: 5%;
+    }
+
+    .col-width-medium {
+      width: 250px;
+    }
+
+    .col-width-large {
+      width: 25%;
+    }
+  </style>
+
+
 </head>
 
 <body class="index-page">
@@ -29,7 +44,6 @@
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <h1 class="sitename">Seri Padi De Cabin</h1>
-        <span>.</span>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -63,7 +77,7 @@
         </div>
         <div class="row gy-4">
           <div class="col-12 col-lg-2">
-            <nav class="navmenu">
+            <nav>
               <ul class="nav flex-column align-items-start">
                 <li class="nav-item">
                   <a class="nav-link" href="#booking_list">My Bookings</a>
@@ -80,50 +94,55 @@
           <div class="col-12 col-lg-10">
             <div id="booking_list" class="section-content">
               <h4>My Bookings</h4>
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Booking Name</th>
-                    <th scope="col">Remarks</th>
-                    <th scope="col">Date</th>
-                    <th scope="col">Telephone</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Pax</th>
-                    <th scope="col">Status</th>
-                    <th scope="col">Action</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <% bookingsList.forEach((booking, index) => { %>
-                  <tr>
-                    <td><%= index + 1 %></td>
-                    <td><%= booking.BOOKING_NAME %></td>
-                    <td><%= booking.BOOKING_REMARKS %></td>
-                    <td><%= booking.BOOKING_DATE.toDateString() %></td>
-                    <td><%= booking.BOOKING_TEL %></td>
-                    <td><%= booking.BOOKING_EMAIL %></td>
-                    <td><%= booking.BOOKING_PAX %></td>
-                    <% if(booking.BOOKING_STATUS === "N") {  %>
-                    <td>NEW</td>
-                    <% } else if(booking.BOOKING_STATUS === "X") { %>
-                    <td>CANCELLED</td>
-                    <% } else if(booking.BOOKING_STATUS === "C") { %>
-                    <td>CONFIRMED</td>
-                    <%} else {%>
-                    <td></td>
-                    <% } %>
-                    <td>
-                      <% if(booking.BOOKING_STATUS === "X") { %>
+
+              <div class="table-responsive">
+                <table class="table table-bordered">
+                  <thead>
+                    <tr>
+                      <th scope="col">#</th>
+                      <th scope="col">Booking Name</th>
+                      <th scope="col" class=".col-width-medium">Remarks</th>
+                      <th scope="col">Date</th>
+                      <th scope="col">Telephone</th>
+                      <th scope="col">Email</th>
+                      <th scope="col">Pax</th>
+                      <th scope="col">Status</th>
+                      <th scope="col">Action</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <% bookingsList.forEach((booking, index) => { %>
+                    <tr>
+                      <td><%= index + 1 %></td>
+                      <td><%= booking.BOOKING_NAME %></td>
+                      <td class=".col-width-medium"><%= booking.BOOKING_REMARKS %></td>
+                      <td><%= new Date(booking.BOOKING_DATE).toDateString() %></td>
+                      <td><%= booking.BOOKING_TEL %></td>
+                      <td><%= booking.BOOKING_EMAIL %></td>
+                      <td><%= booking.BOOKING_PAX %></td>
+                      <% if (booking.BOOKING_STATUS === "N") { %>
+                      <td>NEW</td>
+                      <% } else if (booking.BOOKING_STATUS === "X") { %>
+                      <td>CANCELLED</td>
+                      <% } else if (booking.BOOKING_STATUS === "C") { %>
+                      <td>CONFIRMED</td>
                       <% } else { %>
-                      <button class="btn btn-danger cancel-booking" data-booking-id="<%= booking.ID_BOOKING %>">Cancel</button>
+                      <td></td>
                       <% } %>
-                    </td>
-                  </tr>
-                  <% }); %>
-                </tbody>
-              </table>
+                      <td>
+                        <% if (booking.BOOKING_STATUS === "X") { %>
+                        <% } else { %>
+                        <button class="btn btn-danger cancel-booking" data-booking-id="<%= booking.ID_BOOKING %>">Cancel</button>
+                        <% } %>
+                      </td>
+                    </tr>
+                    <% }); %>
+                  </tbody>
+                </table>
+              </div>
             </div>
+
+
 
             <div id="booking_new" class="section-content">
               <h4 class="mb-4">Create A New Booking</h4>
@@ -327,6 +346,7 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="js/formActions.js" type="module"></script>
   <script src="js/bookings_page.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 
 </html>
